fix test cutoff

--- a/frontend/src/assets/styles/ui/_button.scss
+++ b/frontend/src/assets/styles/ui/_button.scss
@@ -83,7 +83,6 @@
 
   &-content {
     text-overflow: ellipsis;
-    overflow: hidden;
     display: inline-flex;
     align-items: center;
     justify-content: center;
